1.5.0 (2010-Dec-05):
  * Downloads multiple files within a thread concurrently.
  * Workaround for downloads stalling when site is sluggish.
  * Saves thread list when updated instead of just on exit.
  * Saves stopped threads in thread list.
  * Allows only one instance to run at a time.
1.4.3 (2010-Nov-26):
  * Download folder in thread list is stored as relative path.
1.4.2 (2010-Apr-02):
  * Fixed crash with non-4chan threads containing mailto links.
  * Enabled auto-scaling to fix text truncation with larger font sizes.
  * Enter key is a shortcut for "Add Thread".
  * Backs up the page before redownloading in case it 404s in the middle of
    downloading.
  * Fixed non-breaking spaces being converted to spaces when post-processing
    HTML.
1.4.1 (2010-Jan-01):
  * Workaround for crash in Mono when program update checking is enabled.
1.4.0 (2010-Jan-01):
  * Option to download thumbnails and post-process HTML to create a mostly-
    working thread backup (no external CSS, no embedded images other than
    thumbnails, etc).
  * Fixed handling of special characters in filenames.
  * Ability to restart stopped threads in the context menu.
1.3.0 (2009-Dec-28):
  * Option to verify hash of downloaded images (currently 4chan only).
  * Option to save images with original filenames (currently 4chan only).
  * Option to automatically check for program updates (disabled by default).
  * Various fixes related to URL parsing, file error handling, etc.
1.2.3 (2009-Dec-25):
  * Restores 4chan and AnonIB support.
  * Custom link parsing and other code to allow for automatic downloading of
    multiple page threads (not implemented for any site at this time as I
    didn't find any I wanted to support).
1.2.2 (2009-Aug-22):
  * Download folder can be relative to the executable folder.
  * Settings and thread list can be saved in the executable folder instead of
    the application data folder.
  * Detects image wrapper pages and sends referer for better site